--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    knitr,
-    rmarkdown
+    ggplot2
 Imports:
     knitr,
     rmarkdown,
