Updated package name from 'r_html_select' to 'selr'. Also begins tracking the '.Rproj' file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: rhtmlselect
+Package: selr
 Type: Package
 Title: Add Interactive Functionality in HTML Documents Using Only Client-side HTML and JavaScript
 Version: 0.1.0
